# meqpy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
GC/example-code/: rate-eq_CG.ipynb
Nils/: cubes.py  utils.py
src/meqpy/: __init__.py
src/meqpy/equations/: __init__.py  master_equations.py
src/meqpy/io/: __init__.py  cube.py  cube_2pz.py
src/meqpy/master_equation/: __init__.py  equilibrium.py  measurement.py
src/meqpy/system/: __init__.py  band_system.py  band_transition.py  dot.py  dyson.py  lattice.py  molecule.py  state.py  system.py  transition.py  types.py
src/meqpy/utils/: __init__.py  constants.py  coordinates.py  decay_constant.py  lineshape.py  physical_constants.py  physics.py  tersoff_hamann.py  types.py
src/mesolver/: __init__.py
src/mesolver/equations/: master_equations.py
src/mesolver/io/: __init__.py  cube.py
src/mesolver/system/: __init__.py  state.py  system.py  transition.py
src/tests/: conftest.py  test_cube.py
tests/: conftest.py  test_bandsystem.py  test_bandtransition.py  test_cube.py  test_dyson.py  test_lattice.py  test_master_equation.py  test_molecule.py  test_system.py  test_transition.py
tests/data/: sample.cube  sample_non_ortho_z.cube  sample_orbital.cube  sample_rhombic.cube  sample_rotated.cube
tutorial/dyson_from_2pz_TB/reference/: pentacene_aiidalab.xyz
tutorial/dyson_from_2pz_vector/: pentacene_example.ipynb
tutorial/dyson_from_2pz_vector/reference/: rate-eq_CG.ipynb
